Committed translation (tr).

--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -198,4 +198,4 @@
 	<string name="error_key_not_in_document">Belgede bulunmadı</string>
 	<string name="error_page_too_large">Yüklenmesi için bu sayf</string>
 	<string name="prefs_text_size_sample_text">Örnek metin</string>
-</resources>
+<string name="empty_list">No items to display</string><string name="prefs_show_bookmarks_summary">Show icon in bookmarked verses</string><string name="prefs_show_bookmarks_title">Show bookmark icons</string><string name="prefs_tilt_to_scroll_summary">Tilt device to scroll page up/down</string><string name="prefs_tilt_to_scroll_title">Tilt to scroll</string></resources>
