--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -134,8 +134,16 @@
 
     <!-- Daily Reading Plan -->
     <string name="rdg_plan_title">Reading Plan</string>
+    <string name="rdg_plan_selector_title">Choose a Reading Plan</string>
+    <string name="rdg_plan_selected_confirmation">Start Reading Plan?</string>
     <string name="rdg_plan_day">Day %s</string>
-    
+    <string name="done">Done</string>
+    <string name="rdg_plan_m1gospels">Through the Gospels in a month</string>
+    <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
+    <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT simultaneously</string>
+    <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
+    <string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string>
+        
     <!-- Document context menu -->
     <string name="delete">Delete</string>
     <string name="delete_index">Delete search index</string>
