--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Application text
-@author Martin Denham [mjdenham at gmail dot com]
-@author Caleb Maclennan [caleb@alerque.com]
-@author WolfHawke [wolfhawke@wolfhawke.com]
-@see gnu.lgpl.License for license details.<br>
-The copyright to this program is held by it's author.
+ 
+ @author Martin Denham [mjdenham at gmail dot com]
+ @author Caleb Maclennan [caleb@alerque.com]
+ @author WolfHawke [wolfhawke@wolfhawke.com]
+ @see gnu.lgpl.License for license details.<br>
+      The copyright to this program is held by it's author.
 -->
 <resources>
     <string name="app_name">And Bible</string>
-    <!-- Startup & Help -->
+
+	<!-- Startup & Help -->
     <string name="splash_top_text">\n\"Tanrı, \'Işık olsun\' diye buyurdu ve ışık oldu."\nYaratılış 1:3</string>
     <string name="help_text">İşlemler için MENÜ düğmesine basınız.\n\nÖnceki veya sonraki bölüme geçmek için ekranda parmağınızı kaydırın, iztopunu çevirin veya yön düğmelerine basın.</string>
-    <string name="help_text_long"><b>Gezinti Komutları</b>\nBölüm değiştirmek için ekranda parmağınızı kaydırın, iztopunu çevirin veya yön düğmelerine basın. Sonraki bölüm için sağa gidiniz. Önceki bölüm için sola gidiniz.
-    \nÇift vuruş tam ekran modunu açıp kapatır.
-    \n\n<b>Menü</b>
-    \nİşlemler içın MENÜ düğmesine basın. 
-    \n\nKutsal Kitap çevirisi, yorum veya sözlük gibi ek belgeler indirmek için Menü/Daha Fazla/Belge İndir\'e basın 
-    \n\n<b>Sesli Okuma</b>\nSeçili belgenin sesli okumasını başlatmak ve durdurmak için Sesli Oku öğesini seçiniz.
-    \n\n<b>Notlarım</b>\nAyet içerik menüsüde bulunan Notlarıma ekle öğesi aracılığıyla not ekleyebilirsiniz. Var olan notlara Menü'den erişilebilirsiniz. 
-    \n\n<b>Yer İmleri</b>\nYer imilerini, ayet içerik menüsü kullanarak ekleyebilirsniz. Yer imi yöneticisine ana menüden erişilebilirsiniz. Yer imleri görüntülediğinizde sıralarını belirlediğiniz etiketlere göre değiştirmek için içerik menüsünü kullanabilirsiniz. 
-    \n\n<b>Arama</b>\nArama metninde *, ?, AND (ve), OR (veya), NOT (değil) gibi özel karakterler ve ifadeler kullanılabilir. (daha fazla bilgi için \"Apache Lucene - Query Parser Syntax\" başlıklı makaleyi okuyun) 
-    \n\n<b>İçerik Menüleri</b> 
-    \nKutsal Kitap okuma modunda seçili ayet üzerinde işlem yapmak için içerik menüsünü kullanabilirsiniz. Menüyü açmak için ayete uzun basınız.
-    \nBelge seçme modunda belgeyi silmek veya belge hakkında bilgi görüntülemek için, belgeye uzun basınız.
-    \nGeçmişteki hareketlerinizin listesini görütülemek için Geri düğmesine uzun basınız.
-    </string>
+    <string name="help_text_long"><b>Gezinti Komutları</b>\nBölüm değiştirmek için ekranda parmağınızı kaydırın, iztopunu çevirin veya yön düğmelerine basın. Sonraki bölüm için sağa gidiniz. Önceki bölüm için sola gidiniz. \nÇift vuruş tam ekran modunu açıp kapatır. \n\n<b>Menü</b> \nİşlemler içın MENÜ düğmesine basın. \n\nKutsal Kitap çevirisi, yorum veya sözlük gibi ek belgeler indirmek için Menü/Daha Fazla/Belge İndir\'e basın \n\n<b>Sesli Okuma</b>\nSeçili belgenin sesli okumasını başlatmak ve durdurmak için Sesli Oku öğesini seçiniz. \n\n<b>Notlarım</b>\nAyet içerik menüsüde bulunan Notlarıma ekle öğesi aracılığıyla not ekleyebilirsiniz. Var olan notlara Menü'den erişilebilirsiniz. \n\n<b>Yer İmleri</b>\nYer imilerini, ayet içerik menüsü kullanarak ekleyebilirsniz. Yer imi yöneticisine ana menüden erişilebilirsiniz. Yer imleri görüntülediğinizde sıralarını belirlediğiniz etiketlere göre değiştirmek için içerik menüsünü kullanabilirsiniz. \n\n<b>Arama</b>\nArama metninde *, ?, AND (ve), OR (veya), NOT (değil) gibi özel karakterler ve ifadeler kullanılabilir. (daha fazla bilgi için \"Apache Lucene - Query Parser Syntax\" başlıklı makaleyi okuyun) \n\n<b>İçerik Menüleri</b> \nKutsal Kitap okuma modunda seçili ayet üzerinde işlem yapmak için içerik menüsünü kullanabilirsiniz. Menüyü açmak için ayete uzun basınız. \nBelge seçme modunda belgeyi silmek veya belge hakkında bilgi görüntülemek için, belgeye uzun basınız. \nGeçmişteki hareketlerinizin listesini görütülemek için Geri düğmesine uzun basınız.</string>
     <string name="version_text">Sürüm %s</string>
     <string name="no_sdcard_error">Lütfen hafıza (SD) kartını takıp And Bible uygulamasını yeniden başlatın.</string>
     
@@ -42,7 +31,7 @@ The copyright to this program is held by it's author.
     <string name="choosePassageChapterName">Bölümü Seç</string>
     <string name="choosePassageVerseName">Ayeti Seç</string>
 
-    <!-- Search -->
+	<!--  Search -->
     <string name="search_index">Arama Dizini</string>
     <string name="index_creation_required">Arama yapabilmek için bu belgenin bir dizini olması şarttır.\n\nDizinleri internetten indirebilir veya cihazınızda oluşturabilirsiniz.\nİndirilmiş dizinin kurulumu çok daha hızlı olur. Ayrıca indirilmiş dizinlerde ek fonksyonlar bulunur.\nDizin indirmek için İnternet bağlantınız olması gerekir</string>
     <string name="indexing_wait_msg">Dizin yaratıldıktan sonra arama sayfası açılacaktır.</string>
@@ -51,7 +40,7 @@ The copyright to this program is held by it's author.
     <string name="index_not_available_for_download">Bu dizin indirim için mevcut değildir.</string>
     <string name="index_create">Oluştur</string>
 
-    <!-- Tasks -->
+	<!-- Tasks -->
     <string name="progress_status">İlerleme</string>
     <string name="task_kill_warning">Bu işlem zaman alacaktır. Eğer uygulamadan çıkarsanız, işlem bitmeden sonlandırılabilir.</string>
     <string name="no_tasks_running">İşlem gören görev yok.</string>
@@ -192,8 +181,8 @@ The copyright to this program is held by it's author.
     <string name="mynote_saved">Notlarım kaydedildi</string>
     <string name="mynote_view_edit">Notum</string>
     <string name="mynotes">Notlarım</string>
-
-    <!-- Document types -->
+	
+	<!-- Document types -->    
     <string name="doc_type_bible">Kutsal Kitap</string>
     <string name="doc_type_commentary">Yorum Kitabı</string>
     <string name="doc_type_dictionary">Sözlük</string>
@@ -201,7 +190,7 @@ The copyright to this program is held by it's author.
 
     <!-- Languages -->
     <string name="lang_default">Varsayılan</string>
-
+	
     <!-- General -->
     <string name="okay">Tamam</string>
     <string name="cancel">İptal</string>
