--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="rdg_plan_selector_title">Choose a Reading Plan</string>
     <string name="rdg_plan_day">Day %s</string>
     <string name="done">Done</string>
+    <string name="reset">Reset</string>
     <string name="rdg_plan_m1gospels">Through the Gospels in a month</string>
     <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
     <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT simultaneously</string>
