--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -136,6 +136,7 @@
     <string name="rdg_plan_title">Reading Plan</string>
     <string name="rdg_plan_selector_title">Choose a Reading Plan</string>
     <string name="rdg_plan_day">Day %s</string>
+    <string name="rdg_plan_set_start_jan1">Start Jan 1</string>
     <string name="done">Done</string>
     <string name="reset">Reset</string>
     <string name="rdg_plan_m1gospels">Through the Gospels in a month</string>
