--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -141,7 +141,7 @@
     <string name="reset">Reset</string>
     <string name="rdg_plan_m1gospels">Through the Gospels in a month</string>
     <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
-    <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT simultaneously</string>
+    <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string>
     <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
     <string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string>
         
