--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -139,12 +139,12 @@
     <string name="rdg_plan_set_start_jan1">Start Jan 1</string>
     <string name="done">Done</string>
     <string name="reset">Reset</string>
-    <string name="rdg_plan_m1gospels">Through the Gospels in a month</string>
     <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
     <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string>
     <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
     <string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string>
-        
+    <!-- string name="rdg_plan_m1gospels">Through the Gospels in a month</string -->
+    
     <!-- Document context menu -->
     <string name="delete">Delete</string>
     <string name="delete_index">Delete search index</string>
