--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="rdg_plan_set_start_jan1">Start Jan 1</string>
     <string name="done">Done</string>
     <string name="reset">Reset</string>
+    <string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string>
     <string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string>
     <string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string>
     <string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string>
