--- a/AndBible/res/values-tr/strings.xml
+++ b/AndBible/res/values-tr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- Application text
  
  @author Martin Denham [mjdenham at gmail dot com]
@@ -208,4 +208,4 @@
    <string name="error_page_too_large">Sayfa yüklenmek için fazla büyük</string>
    <string name="error_key_not_in_document">Belgede bulunmadı</string>
    <string name="empty_list">Öğe bulunmadı</string>
-</resources>
+<string name="rdg_plan_title">Reading Plan</string><string name="rdg_plan_selector_title">Choose a Reading Plan</string><string name="rdg_plan_day">Day %s</string><string name="rdg_plan_set_start_jan1">Start Jan 1</string><string name="done">Done</string><string name="reset">Reset</string><string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string><string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string><string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string></resources>
