--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -7,8 +7,8 @@
   <string name="version_text">Versjon %s</string>
   <!-- main menu -->
   <string name="chooseBook">Moduler</string>
-  <string name="selectPassage">Avsnitt</string>
-  <string name="search">Finn</string>
+  <string name="selectPassage">Bibelvers</string>
+  <string name="search">Søk</string>
   <string name="settings">Innstillinger</string>
   <string name="history">Historikk</string>
   <string name="speak">Høytlesing</string>
@@ -64,7 +64,7 @@
   <string name="download_document_confirm_prefix">"Last ned"</string>
   <string name="error_downloading">En feil oppstod ved nedlasting. Vennligst sjekk din internettilkobling.</string>
   <string name="no_internet_connection">Kunne ikke koble til internett</string>
-  <string name="wait_for_bible">Vennligst vent til bibelen er ferdig nedlastet, og du vil deretter bli tatt til hovedskjermen.</string>
+  <string name="wait_for_bible">Vennligst vent til Bibelen er ferdig nedlastet, og du vil deretter bli tatt til hovedskjermen.</string>
   <string name="wait_for_bible_not_yet">Vennligs vent. Bibelen er enda ikke ferdig installert.</string>
   <string name="download_complete_no_bibles">Ingen bibler ble installert. Trykk tilbake og prøv igjen.</string>
   <string name="too_many_jobs">For mange jobber utføres. Vennligst vent til noen er fullført før du prøver igjen.</string>
@@ -120,7 +120,7 @@
   <string name="new_label">Ny gruppe</string>
   <string name="new_label_prompt">Gruppenavn</string>
   <string name="no">Nei</string>
-  <string name="no_indexed_bible_with_strongs_ref">Du må laste ned en bibel som inneholder Strongs ordboknummer og laste ned søkeregisteret via Søk-funksjonen.</string>
+  <string name="no_indexed_bible_with_strongs_ref">Du må laste ned en Bibel som inneholder Strongs ordboknummer og laste ned søkeregisteret via Søkefunksjonen.</string>
   <string name="one_chapter">%d kapittel</string>
   <string name="one_page">%d side</string>
   <string name="one_verse">%d vers</string>
@@ -157,4 +157,4 @@
   <string name="storage_space_warning">Ikke nok lokal lagringsplass.</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="empty_list">Ingen data å vise</string><string name="prefs_show_bookmarks_summary">Vis ikon i bokmerkede vers</string><string name="prefs_show_bookmarks_title">Vis bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Rull siden opp/ned ved å helle på enheten</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle siden</string><string name="rdg_plan_title">Reading Plan</string><string name="rdg_plan_selector_title">Choose a Reading Plan</string><string name="rdg_plan_day">Day %s</string><string name="rdg_plan_set_start_jan1">Start Jan 1</string><string name="done">Done</string><string name="reset">Reset</string><string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string><string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string><string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string></resources>
+<string name="empty_list">Ingen data å vise</string><string name="prefs_show_bookmarks_summary">Vis ikon i bokmerkede vers</string><string name="prefs_show_bookmarks_title">Vis bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Rull siden nedover ved å helle på enheten</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle teksten</string><string name="rdg_plan_title">Leseplan</string><string name="rdg_plan_selector_title">Velg en leseplan</string><string name="rdg_plan_day">Dag %s</string><string name="rdg_plan_set_start_jan1">Start 1. januar</string><string name="done">Ferdig</string><string name="reset">Tilbakestill</string><string name="rdg_plan_y1ntpspr">Det nye testamente, salmene og ordspråkene på ett år</string><string name="rdg_plan_y1ot1nt1_chronological">Hele Bibelen kronologisk på ett år</string><string name="rdg_plan_y1ot1nt1_OTandNT">Hele Bibelen på ett år (GT og NT parallelt)</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Hele Bibelen på ett år (GT, deretter NT)</string><string name="rdg_plan_y1ot1nt2_mcheyne">Hele Bibelen på ett år (M\'Cheyne)</string></resources>
