--- a/AndBible/res/values-nn/strings.xml
+++ b/AndBible/res/values-nn/strings.xml
@@ -10,13 +10,13 @@
     <!-- Startup & Help -->
     <string name="splash_top_text">"\n\"Då sagde Gud: \'Det verte ljos!\' So vart det ljos.\"\nFyrste Mosebok 1, 3"</string>
     <string name="help_text">Trykk på meny-knappen for oppgåver\n\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen</string>
-    <string name="help_text_long">"<b>Navigasjon</b>\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen.\nDobbeltrykk slår av/på fullskjermmodus.\n\n<b>Meny</b> \nTrykk menyknappen for å sjå tilgjengelege val\n\nFor å laste ned fleire modular, trykk menyknappen-&gt;Meir-&gt;Last ned modular\n\n<b>Høgtlesing</b>\nTrykk menyknappen-&gt;Meir-&gt;Høgtlesing for å lytte til/stanse høgtlesing\n\n<b>Mine notat</b>\nNotat kan leggjast til versmenyen-&gt;Legg til notat. Ei liste over notat kan synast via hovudmenyen-&gt;Mine notat.\n\n<b>Bokmerke</b>\nBokmerke kan opprettast frå bibelversmenyen. Du når bokmerkehandteraren frå hovudmenyen. Bokmerkehandteraren let deg gruppere bokmerker.\n\n<b>Søk</b>\nI søkjestrengen kan du nytte spesialteikn som *, ?, AND, OR, NOT (sjå \"Apache Lucene - Query Parser Syntax\" for fleire detaljar).\n\n<b>Bibelversmenyen</b> \nTrykk lenge i bibelversvisning for å åpne meny for gjeldende vers.\nTrykk lenge på ein modul i modulhandteraren for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å syne historikk.\n"</string>
+    <string name="help_text_long">"<b>Navigasjon</b>\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen.\nDobbeltrykk slår av/på fullskjermmodus.\n\n<b>Meny</b> \nTrykk menyknappen for å sjå tilgjengelege val\n\nFor å laste ned fleire modular, trykk menyknappen-&gt;Meir-&gt;Last ned modular\n\n<b>Høgtlesing</b>\nTrykk menyknappen-&gt;Meir-&gt;Høgtlesing for å lytte til/stanse høgtlesing\n\n<b>Mine notat</b>\nNotat kan leggjast til versmenyen-&gt;Legg til notat. Ei liste over notat kan synast via hovudmenyen-&gt;Mine notat.\n\n<b>Bokmerke</b>\nBokmerke kan opprettast frå bibelversmenyen. Du når bokmerkehandteraren frå hovudmenyen. Bokmerkehandteraren let deg gruppere bokmerker.\n\n<b>Søk</b>\nI søkjestrengen kan du nytte særteikn som *, ?, AND, OR, NOT (sjå \"Apache Lucene - Query Parser Syntax\" for fleire detaljar).\n\n<b>Bibelversmenyen</b> \nTrykk lenge i bibelversvisning for å opne meny for gjeldande vers.\nTrykk lenge på ein modul i modulhandteraren for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å syne historikk.\n"</string>
     <string name="version_text">Versjon %s</string>
     <string name="no_sdcard_error">Vennleg koble til SD-kort og start And Bible opp att.</string>
 
     <!-- main menu -->
     <string name="chooseBook">Modular</string>
-    <string name="selectPassage">Bibelvers</string>
+    <string name="selectPassage">Oppslag</string>
     <string name="search">Søk</string>
     <string name="settings">Innstillingar</string>
     <string name="history">Historikk</string>
@@ -51,7 +51,7 @@
     <string name="search_result_count">%d søkjetreff funne</string>
     <string name="search_showing_first">For mange søkjetreff. Synar dei fyrste %d</string>
     <string name="search_bible_section_group_prompt">Søkjeområde:</string>
-    <string name="search_all_bible">Heile bibelen</string>
+    <string name="search_all_bible">Heile Bibelen</string>
     <string name="search_new_testament">Det nye testamente</string>
     <string name="search_old_testament">Det gamle testamente</string>
     <string name="search_current_book">Denne boka</string>
@@ -67,7 +67,7 @@
     <string name="prefs_show_notes_title">Fotnotar og kryssreferansar</string>
     <string name="prefs_show_notes_summary">Vis fotnotar og kryssreferansar</string>
     <string name="prefs_show_strongs_title">Vis Strong sine ordnummer</string>
-    <string name="prefs_show_strongs_summary">Lenke til greske og hebraiske definisjonar</string>
+    <string name="prefs_show_strongs_summary">Lenkje til greske og hebraiske definisjonar</string>
     <string name="prefs_show_morphology_title">Morfologiske kodar</string>
     <string name="prefs_show_morphology_summary">Vis \"Robinson\'s Greek morphology\"</string>
     <string name="prefs_section_title_title">Seksjonstitlar</string>
@@ -75,7 +75,7 @@
     <string name="prefs_red_letter_title">Raud skrift</string>
     <string name="prefs_red_letter_summary">Vis Jesu tale som raud skrift</string>
     <string name="prefs_night_mode_title">Nattmodus</string>
-    <string name="prefs_night_mode_summary">For lettare å kunne lese i myrkret</string>
+    <string name="prefs_night_mode_summary">For lettare å kunne lese i mørkret</string>
     <string name="prefs_navigate_to_verse_title">Naviger til vers</string>
     <string name="prefs_navigate_to_verse_summary">Vel vers (og kapittel) når du navigerer til ein bibelstad</string>
     <string name="prefs_text_size_title">Tekststorleik</string>
@@ -96,7 +96,7 @@
     <string name="strongs_not_installed">Vennleg last ned Strong si hebraisk og gresk ordbok</string>
     <string name="all_greek_occurrences">Leit opp alle førekomstar</string>
     <string name="all_hebrew_occurrences">Leit opp alle førekomstar</string>
-    <string name="no_indexed_bible_with_strongs_ref">Du må laste ned ein bibel som inneheld Strong sine ordnummer og laste ned søkjeregister via Søk</string>
+    <string name="no_indexed_bible_with_strongs_ref">Du må laste ned ein Bibel som inneheld Strong sine ordnummer og laste ned søkjeregister via Søk</string>
     <string name="morph_robinson_not_installed">Vennleg last ned ordboka \'Robinson\'s Morphological Analysis Codes\'</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
@@ -110,8 +110,8 @@
     <string name="error_downloading">Kunne ikkje laste ned. Vennleg kontrollér internettilkoblinga di.</string>
     <string name="no_internet_connection">Kan ikkje koble til internett</string>
     <string name="storage_space_warning">Ikkje nok lokal lagringsplass.</string>
-    <string name="wait_for_bible">Vennleg vent på at bibelen er ferdig nedlasta, og du blir deretter ført til hovudskjermen.</string>
-    <string name="wait_for_bible_not_yet">Vennelg vent. Ein bibel er enda ikkje ferdig installert.</string>
+    <string name="wait_for_bible">Vennleg vent på at Bibelen er ferdig nedlasta, og du blir deretter ført til hovudskjermen.</string>
+    <string name="wait_for_bible_not_yet">Vennelg vent. Ein Bibel er enda ikkje ferdig installert.</string>
     <string name="download_complete_no_bibles">"Ingen biblar vart installert. Vennleg trykk Attende og prøv på ny."</string>
     <string name="too_many_jobs">For mange jobbar på ein gong. Vennelg vent på at nokre fullfører før du prøver om att.</string>
 
@@ -200,4 +200,4 @@
     <string name="error_no_content">Ikkje noko innhald i verset</string>
     <string name="error_page_too_large">Sida er for stor til å laste</string>
     <string name="error_key_not_in_document">Ikkje funne i modulen</string>
-<string name="empty_list">Inkje data å syne</string><string name="prefs_show_bookmarks_summary">Syn ikon i bokmerkede vers</string><string name="prefs_show_bookmarks_title">Syn bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Hell på eininga for å rulle side opp/ned</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle sida</string><string name="rdg_plan_title">Reading Plan</string><string name="rdg_plan_selector_title">Choose a Reading Plan</string><string name="rdg_plan_day">Day %s</string><string name="rdg_plan_set_start_jan1">Start Jan 1</string><string name="done">Done</string><string name="reset">Reset</string><string name="rdg_plan_y1ntpspr">New Testament, Psalms, and Proverbs in a year</string><string name="rdg_plan_y1ot1nt1_chronological">Through the Bible chronologically in a year</string><string name="rdg_plan_y1ot1nt1_OTandNT">Through the bible in a year - OT and NT</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Through the bible in a year - OT then NT</string><string name="rdg_plan_y1ot1nt2_mcheyne">Through the bible in a year (M\'Cheyne)</string></resources>
+<string name="empty_list">Inkje data å syne</string><string name="prefs_show_bookmarks_summary">Syn ikon i bokmerka vers</string><string name="prefs_show_bookmarks_title">Syn bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Hell på eininga for å rulle teksten nedover</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle tekst</string><string name="rdg_plan_title">Leseplan</string><string name="rdg_plan_selector_title">Vel leseplan</string><string name="rdg_plan_day">Dag %s</string><string name="rdg_plan_set_start_jan1">Byrje 1. januar</string><string name="done">Fullført</string><string name="reset">Tilbakestill</string><string name="rdg_plan_y1ntpspr">Det nye testamente, Salmane og Ordtøka på eitt år</string><string name="rdg_plan_y1ot1nt1_chronological">Heile Bibelen kronologisk på eitt år</string><string name="rdg_plan_y1ot1nt1_OTandNT">Heile Bibelen på eit år (GT og NT parallelt)</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Heile Bibelen på eitt år (GT og deretter NT)</string><string name="rdg_plan_y1ot1nt2_mcheyne">Heile Bibelen på eitt år (M\'Cheyne)</string></resources>
