--- a/AndBible/res/values-iw/strings.xml
+++ b/AndBible/res/values-iw/strings.xml
@@ -13,7 +13,7 @@
   <string name="prefs_interface_locale_title">שפת התוכנה</string>
   <string name="prefs_interface_locale_summary">בחירת שפה עבור התוכנה</string>
   <string name="locale_change_warning">התוכנה תופעל מחדש כדי לשנות את השפה</string>
-  <string name="refresh_book_list">האם לטעון מחדש את רשימת הספרים?</string>
+  <string name="download_refreshing_book_list">האם לטעון מחדש את רשימת הספרים?</string>
   <string name="share_verse">שתף פסוק זה ...</string>
   <string name="share_verse_subject">הפסוק הזה נשלח אליך באמצעות And Bible</string>
   <string name="general_book">ספר</string>
