--- a/AndBible/res/values-pt/strings.xml
+++ b/AndBible/res/values-pt/strings.xml
@@ -124,7 +124,7 @@
   <string name="prefs_interface_locale_title">"Idioma do aplicativo"</string>
   <string name="prefs_verse_per_line_summary">Mostrar cada versículo em uma linha diferente</string>
   <string name="prefs_verse_per_line_title">Um versículo por linha</string>
-  <string name="refresh_book_list">Atualizar a lista de documentos disponíveis?</string>
+  <string name="download_refreshing_book_list">Atualizar a lista de documentos disponíveis?</string>
   <string name="rest_of_book">Para o fim do livro</string>
   <string name="rest_of_chapter">Para o fim do capítulo</string>
   <string name="share_verse">Compartilhar este versículo...</string>
