--- a/AndBible/res/values-nn/strings.xml
+++ b/AndBible/res/values-nn/strings.xml
@@ -12,7 +12,7 @@
     <string name="help_text">Trykk på meny-knappen for oppgåver\n\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen</string>
     <string name="help_text_long">"<b>Navigasjon</b>\nNaviger til neste eller førre kapittel ved å nytte rulleballen, pilknappane eller dra fingeren vannrett over skjermen.\nDobbeltrykk slår av/på fullskjermmodus.\n\n<b>Meny</b> \nTrykk menyknappen for å sjå tilgjengelege val\n\nFor å laste ned fleire modular, trykk menyknappen-&gt;Meir-&gt;Last ned modular\n\n<b>Høgtlesing</b>\nTrykk menyknappen-&gt;Meir-&gt;Høgtlesing for å lytte til/stanse høgtlesing\n\n<b>Mine notat</b>\nNotat kan leggjast til versmenyen-&gt;Legg til notat. Ei liste over notat kan synast via hovudmenyen-&gt;Mine notat.\n\n<b>Bokmerke</b>\nBokmerke kan opprettast frå bibelversmenyen. Du når bokmerkehandteraren frå hovudmenyen. Bokmerkehandteraren let deg gruppere bokmerker.\n\n<b>Søk</b>\nI søkjestrengen kan du nytte særteikn som *, ?, AND, OR, NOT (sjå \"Apache Lucene - Query Parser Syntax\" for fleire detaljar).\n\n<b>Bibelversmenyen</b> \nTrykk lenge i bibelversvisning for å opne meny for gjeldande vers.\nTrykk lenge på ein modul i modulhandteraren for å slette eller vise informasjon om den.\nTrykk lenge på tilbakeknappen for å syne historikk.\n"</string>
     <string name="version_text">Versjon %s</string>
-    <string name="no_sdcard_error">Vennleg koble til SD-kort og start And Bible opp att.</string>
+    <string name="no_sdcard_error">Vennlegst koble til SD-kort og start And Bible opp att.</string>
 
     <!-- main menu -->
     <string name="chooseBook">Modular</string>
@@ -30,11 +30,11 @@
 
     <!--  Search -->
     <string name="search_index">Søkjeregister</string>
-    <string name="index_creation_required">"Eit søkjeregister er påkrevd for å søkje.\n\nSøkjeregistre kan lastast ned frå internett eller byggjast lokalt.\n\nNedlasting er mykje kjappare og desse registra gir betre søkjeeigenskapar.\n\nEi internettilkobling er påkrevd for å laste ned søkjeregister.\n"</string>
+    <string name="index_creation_required">"Eit søkjeregister er påkrevd for å søkje.\n\nSøkjeregistre kan lastast ned frå internett eller byggjast lokalt.\n\nNedlasting er mykje kjappare og desse registra gir betre søkjeeigenskapar. Om du byggjer lokalt, kan det ta opp imot 10 minutt på f.eks. ein HTC Desire.\n\nEi internettilkobling er påkrevd for å laste ned søkjeregister.\n"</string>
     <string name="indexing_wait_msg">Når indekseringa er fullført vert du sendt til hovudskjermen.</string>
     <string name="index">Søkjeregister</string>
     <string name="index_download">Last ned</string>
-    <string name="index_not_available_for_download">Dette søkeregisteret er ikkje tilgjengeleg for nedlasting</string>
+    <string name="index_not_available_for_download">Dette søkjeregisteret er ikkje tilgjengeleg for nedlasting</string>
     <string name="index_create">Bygg lokalt</string>
 
     <!-- Tasks -->
@@ -93,11 +93,11 @@
 
     <!--  Strongs -->
     <string name="strongs">Strong si ordbok</string>
-    <string name="strongs_not_installed">Vennleg last ned Strong si hebraisk og gresk ordbok</string>
+    <string name="strongs_not_installed">Vennlegst last ned Strong si hebraisk og gresk ordbok</string>
     <string name="all_greek_occurrences">Leit opp alle førekomstar</string>
     <string name="all_hebrew_occurrences">Leit opp alle førekomstar</string>
     <string name="no_indexed_bible_with_strongs_ref">Du må laste ned ein Bibel som inneheld Strong sine ordnummer og laste ned søkjeregister via Søk</string>
-    <string name="morph_robinson_not_installed">Vennleg last ned ordboka \'Robinson\'s Morphological Analysis Codes\'</string>
+    <string name="morph_robinson_not_installed">Vennlegst last ned ordboka \'Robinson\'s Morphological Analysis Codes\'</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
 
@@ -107,13 +107,13 @@
     <string name="download_source_message">Modular lastast ned frå \nhttp://www.crosswire.org\nog http://xiphos.org</string>
     <string name="download_document_confirm_prefix">"Last ned"</string>
     <string name="download_refreshing_book_list">Oppfriskar lista over tilgjengelege modular</string>
-    <string name="error_downloading">Kunne ikkje laste ned. Vennleg kontrollér internettilkoblinga di.</string>
+    <string name="error_downloading">Kunne ikkje laste ned. Vennlegst kontrollér internettilkoblinga di.</string>
     <string name="no_internet_connection">Kan ikkje koble til internett</string>
     <string name="storage_space_warning">Ikkje nok lokal lagringsplass.</string>
-    <string name="wait_for_bible">Vennleg vent på at Bibelen er ferdig nedlasta, og du blir deretter ført til hovudskjermen.</string>
-    <string name="wait_for_bible_not_yet">Vennelg vent. Ein Bibel er enda ikkje ferdig installert.</string>
-    <string name="download_complete_no_bibles">"Ingen biblar vart installert. Vennleg trykk Attende og prøv på ny."</string>
-    <string name="too_many_jobs">For mange jobbar på ein gong. Vennelg vent på at nokre fullfører før du prøver om att.</string>
+    <string name="wait_for_bible">Vennlegst vent på at Bibelen er ferdig nedlasta, og du vert deretter ført til hovudskjermen.</string>
+    <string name="wait_for_bible_not_yet">Vennlegst vent. Ein Bibel er enda ikkje ferdig installert.</string>
+    <string name="download_complete_no_bibles">"Ingen biblar vart installert. Vennlegst gå attende og prøv på ny."</string>
+    <string name="too_many_jobs">For mange jobbar på ein gong. Vennlegst vent på at nokre fullfører før du prøver om att.</string>
 
     <!-- Document context menu -->
     <string name="delete">Slett</string>
@@ -192,7 +192,7 @@
     <string name="error">Feil</string>
     <string name="more">Meir</string>
     <string name="retry">Prøv om att</string>
-    <string name="please_wait">Vennleg vent...</string>
+    <string name="please_wait">Vennlegst vent...</string>
     <string name="all">Alle</string>
     
     <!-- Errors -->
@@ -200,4 +200,4 @@
     <string name="error_no_content">Ikkje noko innhald i verset</string>
     <string name="error_page_too_large">Sida er for stor til å laste</string>
     <string name="error_key_not_in_document">Ikkje funne i modulen</string>
-<string name="empty_list">Inkje data å syne</string><string name="prefs_show_bookmarks_summary">Syn ikon i bokmerka vers</string><string name="prefs_show_bookmarks_title">Syn bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Hell på eininga for å rulle teksten nedover</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle tekst</string><string name="rdg_plan_title">Leseplan</string><string name="rdg_plan_selector_title">Vel leseplan</string><string name="rdg_plan_day">Dag %s</string><string name="rdg_plan_set_start_jan1">Byrje 1. januar</string><string name="done">Fullført</string><string name="reset">Tilbakestill</string><string name="rdg_plan_y1ntpspr">Det nye testamente, Salmane og Ordtøka på eitt år</string><string name="rdg_plan_y1ot1nt1_chronological">Heile Bibelen kronologisk på eitt år</string><string name="rdg_plan_y1ot1nt1_OTandNT">Heile Bibelen på eit år (GT og NT parallelt)</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Heile Bibelen på eitt år (GT og deretter NT)</string><string name="rdg_plan_y1ot1nt2_mcheyne">Heile Bibelen på eitt år (M\'Cheyne)</string></resources>
+<string name="empty_list">Inkje funne</string><string name="prefs_show_bookmarks_summary">Syn ikon i bokmerka vers</string><string name="prefs_show_bookmarks_title">Syn bokmerkeikon</string><string name="prefs_tilt_to_scroll_summary">Hell på eininga for å rulle teksten nedover</string><string name="prefs_tilt_to_scroll_title">Hell for å rulle tekst</string><string name="rdg_plan_title">Leseplan</string><string name="rdg_plan_selector_title">Vel leseplan</string><string name="rdg_plan_day">Dag %s</string><string name="rdg_plan_set_start_jan1">Ta til 1. januar</string><string name="done">Fullført</string><string name="reset">Tilbakestill</string><string name="rdg_plan_y1ntpspr">Det nye testamente, Salmane og Ordtøka på eitt år</string><string name="rdg_plan_y1ot1nt1_chronological">Heile Bibelen kronologisk på eitt år</string><string name="rdg_plan_y1ot1nt1_OTandNT">Heile Bibelen på eit år (GT og NT parallelt)</string><string name="rdg_plan_y1ot1nt1_OTthenNT">Heile Bibelen på eitt år (GT og deretter NT)</string><string name="rdg_plan_y1ot1nt2_mcheyne">Heile Bibelen på eitt år (M\'Cheyne)</string><string name="prefs_night_mode_automatic">Automatic</string><string name="download_refresh_book_list_menu_item">Oppfrisk</string><string name="yes">Yes</string></resources>
